--- a/index.html
+++ b/index.html
@@ -24,35 +24,32 @@
 <br>
 7. <a href="https://ravana69.github.io/mobileversion/">Mobile Version</a>
 <br>
+  <b>=================================================================</b>
   <h2>My Website 02</h2>
-1. <a href="https://ravana69.github.io/All-OF-MY-FM/">My FMs</a>
+1. <a href="https://multiuser-sketchpad-colors.glitch.me/">Sketchpad</a>
 <br>
-2. <a href="https://ravana69.github.io/dotspace/">Dot Space</a>
+2. <a href="https://patatap.com/">Patatap</a>
 <br>
-3. <a href="https://ravana69.github.io/firework/">Firework</a>
+3. <a href="https://eternalbox.dev/jukebox_index.html">Eternal Box</a>
 <br>
-4. <a href="https://ravana69.github.io/lifespan/">Lifespan</a>
+4. <a href="https://sleepyti.me/">Sleepti</a>
 <br>
-5. <a href="https://ravana69.github.io/time-timer/">Time Timer</a>
+5. <a href="https://alltheminutes.com/">All the Munutes</a>
 <br>
-6. <a href="https://ravana69.github.io/hackersimulator/">Hacker Simulator</a>
+6. <a href="https://www.yourworldoftext.com/">Your world of text</a>
 <br>
-7. <a href="https://ravana69.github.io/mobileversion/">Mobile Version</a>
+7. <a href="https://thispersondoesnotexist.com/">This Person Does Not Exist</a>
 <br>
+  <b>=================================================================</b>
   <h2>My Website 03</h2>
-1. <a href="https://ravana69.github.io/All-OF-MY-FM/">My FMs</a>
+1. <a href="https://ravana69.github.io/Physarum-WebGL/">Physarum-WebGL</a>
 <br>
-2. <a href="https://ravana69.github.io/dotspace/">Dot Space</a>
+2. <a href="https://ravana69.github.io/literature-clock/">Literature Clock</a>
 <br>
-3. <a href="https://ravana69.github.io/firework/">Firework</a>
+3. <a href="https://ravana69.github.io/burd/">Burd</a>
 <br>
-4. <a href="https://ravana69.github.io/lifespan/">Lifespan</a>
+4. <a href="https://ravana69.github.io/human/">Human</a>
 <br>
-5. <a href="https://ravana69.github.io/time-timer/">Time Timer</a>
-<br>
-6. <a href="https://ravana69.github.io/hackersimulator/">Hacker Simulator</a>
-<br>
-7. <a href="https://ravana69.github.io/mobileversion/">Mobile Version</a>
-<br>
+  <b>=================================================================</b>
 </body>
 </html> 
