--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html>
 
 <head>
-  <title>About</title>
+  <title>===Index===</title>
 </head>
-
 <body>
-
   <h1>INDEX</h1>
-  <br>
   <h2>My Website 01</h2>
 1. <a href="https://ravana69.github.io/All-OF-MY-FM/">My FMs</a>
 <br>
