--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <br>
 4. <a href="https://sleepyti.me/">Sleepti</a>
 <br>
-5. <a href="https://alltheminutes.com/">All the Munutes</a>
+5. <a href="https://alltheminutes.com/">All the Minutes</a>
 <br>
 6. <a href="https://www.yourworldoftext.com/">Your world of text</a>
 <br>
