--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>INDEX</h1>
-  <h2>My Website 01</h2> <a href="https://github.com/ravana69/mywebpage1">🚀</a>
+  <h2>My Website 01 <a href="https://github.com/ravana69/mywebpage1">🚀</a></h2>
 1. <a href="https://ravana69.github.io/All-OF-MY-FM/">My FMs</a>
 <br>
 2. <a href="https://ravana69.github.io/dotspace/">Dot Space</a>
