--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 7. <a href="https://ravana69.github.io/mobileversion/">Mobile Version</a>
 <br>
   <b>=================================================================</b>
-  <h2>My Website 02</h2> <a href="https://github.com/ravana69/mywebpage2">🚀</a>
+  <h2>My Website 02 <a href="https://github.com/ravana69/mywebpage2">🚀</a></h2>
 1. <a href="https://multiuser-sketchpad-colors.glitch.me/">Sketchpad</a>
 <br>
 2. <a href="https://patatap.com/">Patatap</a>
@@ -38,7 +38,7 @@
 7. <a href="https://thispersondoesnotexist.com/">This Person Does Not Exist</a>
 <br>
   <b>=================================================================</b>
-  <h2>My Website 03</h2> <a href="https://github.com/ravana69/mywebpage3">🚀</a>
+  <h2>My Website 03 <a href="https://github.com/ravana69/mywebpage3">🚀</a></h2>
 1. <a href="https://ravana69.github.io/Physarum-WebGL/">Physarum-WebGL</a>
 <br>
 2. <a href="https://ravana69.github.io/literature-clock/">Literature Clock</a>
@@ -54,7 +54,7 @@
 7. <a href="https://blocks.wizb.it/">Blocks Wizb</a>
 <br>
   <b>=================================================================</b>
-  <h2>My Website 04</h2> <a href="https://github.com/ravana69/mywebpage4">🚀</a>
+  <h2>My Website 04 <a href="https://github.com/ravana69/mywebpage4">🚀</a></h2>
 1. <a href="https://www.movenowthinklater.com/">Move Now Think Later</a>
 <br>
 2. <a href="https://ravana69.github.io/bitlisten/">Bit Listen</a>
