--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
   <h1>INDEX</h1>
-  <h2><ul style=“list-style-type:square”>My Website 01 <a href="https://github.com/ravana69/mywebpage1">🚀</a></h2>
+  <ul style=“list-style-type:square”>
+  <li><h2>My Website 01 <a href="https://github.com/ravana69/mywebpage1">🚀</a></h2></li>
 1. <a href="https://ravana69.github.io/All-OF-MY-FM/">My FMs</a>
 <br>
 2. <a href="https://ravana69.github.io/dotspace/">Dot Space</a>
@@ -22,7 +23,7 @@
 7. <a href="https://ravana69.github.io/mobileversion/">Mobile Version</a>
 <br>
   <b>=================================================================</b>
-  <h2><ul style=“list-style-type:square”>My Website 02 <a href="https://github.com/ravana69/mywebpage2">🚀</a></h2>
+  <li><h2>My Website 02 <a href="https://github.com/ravana69/mywebpage2">🚀</a></h2></li>
 1. <a href="https://multiuser-sketchpad-colors.glitch.me/">Sketchpad</a>
 <br>
 2. <a href="https://patatap.com/">Patatap</a>
@@ -38,7 +39,7 @@
 7. <a href="https://thispersondoesnotexist.com/">This Person Does Not Exist</a>
 <br>
   <b>=================================================================</b>
-  <h2><ul style=“list-style-type:square”>My Website 03 <a href="https://github.com/ravana69/mywebpage3">🚀</a></h2>
+  <li><h2>My Website 03 <a href="https://github.com/ravana69/mywebpage3">🚀</a></h2></li>
 1. <a href="https://ravana69.github.io/Physarum-WebGL/">Physarum-WebGL</a>
 <br>
 2. <a href="https://ravana69.github.io/literature-clock/">Literature Clock</a>
@@ -54,7 +55,7 @@
 7. <a href="https://blocks.wizb.it/">Blocks Wizb</a>
 <br>
   <b>=================================================================</b>
-  <h2><ul style=“list-style-type:square”>My Website 04 <a href="https://github.com/ravana69/mywebpage4">🚀</a></h2>
+  <li><h2>My Website 04 <a href="https://github.com/ravana69/mywebpage4">🚀</a></h2></li>
 1. <a href="https://www.movenowthinklater.com/">Move Now Think Later</a>
 <br>
 2. <a href="https://ravana69.github.io/bitlisten/">Bit Listen</a>
@@ -64,5 +65,6 @@
 4. <a href="https://www.sharedrop.io/">Sharedrop</a>
 <br>
   <b>=================================================================</b>
+    </ul>
 </body>
 </html> 
