--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>===Index===</title>
+  <title>🎊🎊🎊INDEX🎊🎊🎊</title>
 </head>
 <body>
-  <h1>INDEX</h1>
-  <ul style=“list-style-type:square”>
+   <ul style=“list-style-type:square”>
+  <h1><li>INDEX</li></h1>
   <h2><li>My Website 01 <a href="https://github.com/ravana69/mywebpage1">🚀</a></li></h2>
 1. <a href="https://ravana69.github.io/All-OF-MY-FM/">My FMs</a>
 <br>
