--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
    <ul style=“list-style-type:square”>
   <h1><li>INDEX</li></h1>
-  <h2><li>My Website 01 <a href="https://github.com/ravana69/mywebpage1">🚀</a></li></h2>
+  <h2><li>My Website 01 <a href="https://ravana69.github.io/mywebpage1">🚀</a></li></h2>
 1. <a href="https://ravana69.github.io/All-OF-MY-FM/">My FMs</a>
 <br>
 2. <a href="https://ravana69.github.io/dotspace/">Dot Space</a>
@@ -23,7 +23,7 @@
 7. <a href="https://ravana69.github.io/mobileversion/">Mobile Version</a>
 <br>
   <b>=================================================================</b>
-  <h2><li>My Website 02 <a href="https://github.com/ravana69/mywebpage2">🚀</a></li></h2>
+  <h2><li>My Website 02 <a href="https://ravana69.github.io/mywebpage2">🚀</a></li></h2>
 1. <a href="https://multiuser-sketchpad-colors.glitch.me/">Sketchpad</a>
 <br>
 2. <a href="https://patatap.com/">Patatap</a>
@@ -39,7 +39,7 @@
 7. <a href="https://thispersondoesnotexist.com/">This Person Does Not Exist</a>
 <br>
   <b>=================================================================</b>
-  <h2><li>My Website 03 <a href="https://github.com/ravana69/mywebpage3">🚀</a></li></h2>
+  <h2><li>My Website 03 <a href="https://ravana69.github.io/mywebpage3">🚀</a></li></h2>
 1. <a href="https://ravana69.github.io/Physarum-WebGL/">Physarum-WebGL</a>
 <br>
 2. <a href="https://ravana69.github.io/literature-clock/">Literature Clock</a>
@@ -55,7 +55,7 @@
 7. <a href="https://blocks.wizb.it/">Blocks Wizb</a>
 <br>
   <b>=================================================================</b>
-  <h2><li>My Website 04 <a href="https://github.com/ravana69/mywebpage4">🚀</a></li></h2>
+  <h2><li>My Website 04 <a href="https://ravana69.github.io/mywebpage4">🚀</a></li></h2>
 1. <a href="https://www.movenowthinklater.com/">Move Now Think Later</a>
 <br>
 2. <a href="https://ravana69.github.io/bitlisten/">Bit Listen</a>
