--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
 <br>
 4. <a href="https://www.sharedrop.io/">Sharedrop</a>
 <br>
+5. <a href="http://touchpianist.com/">Touch Pianist</a>
+<br>
+6. <a href="https://forgotify.com/">Forgotify</a>
+<br>
+7. <a href="https://randomstreetview.com/">Random Street View</a>
+<br>
   <b>=================================================================</b>
     </ul>
 </body>
