--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
 7. <a href="https://randomstreetview.com/">Random Street View</a>
 <br>
   <b>=================================================================</b>
+<h2><li>My Website 05 <a href="https://ravana69.github.io/mywebpage5">🚀</a></li></h2>
+1. <a href="https://globalsequencer.com/menu">Global Sequencer</a>
+<br>
+  <b>=================================================================</b>
     </ul>
 </body>
 </html> 
