--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <title>🎊🎊🎊INDEX🎊🎊🎊</title>
 </head>
 <body>
-   <ul style=“list-style-type:square”>
-  <h1><li>INDEX</li></h1>
-  <h2><li>My Website 01 <a href="https://ravana69.github.io/mywebpage1">🚀</a></li></h2>
+<ul style=“list-style-type:square”>
+<h1><li>INDEX</li></h1>
+<h2><li>My Website 01 <a href="https://ravana69.github.io/mywebpage1">🚀</a></li></h2>
 1. <a href="https://ravana69.github.io/All-OF-MY-FM/">My FMs</a>
 <br>
 2. <a href="https://ravana69.github.io/dotspace/">Dot Space</a>
@@ -22,8 +22,8 @@
 <br>
 7. <a href="https://ravana69.github.io/mobileversion/">Mobile Version</a>
 <br>
-  <b>=================================================================</b>
-  <h2><li>My Website 02 <a href="https://ravana69.github.io/mywebpage2">🚀</a></li></h2>
+<b>=================================================================</b>
+<h2><li>My Website 02 <a href="https://ravana69.github.io/mywebpage2">🚀</a></li></h2>
 1. <a href="https://multiuser-sketchpad-colors.glitch.me/">Sketchpad</a>
 <br>
 2. <a href="https://patatap.com/">Patatap</a>
@@ -38,8 +38,8 @@
 <br>
 7. <a href="https://thispersondoesnotexist.com/">This Person Does Not Exist</a>
 <br>
-  <b>=================================================================</b>
-  <h2><li>My Website 03 <a href="https://ravana69.github.io/mywebpage3">🚀</a></li></h2>
+<b>=================================================================</b>
+<h2><li>My Website 03 <a href="https://ravana69.github.io/mywebpage3">🚀</a></li></h2>
 1. <a href="https://ravana69.github.io/Physarum-WebGL/">Physarum-WebGL</a>
 <br>
 2. <a href="https://ravana69.github.io/literature-clock/">Literature Clock</a>
@@ -54,7 +54,7 @@
 <br>
 7. <a href="https://blocks.wizb.it/">Blocks Wizb</a>
 <br>
-  <b>=================================================================</b>
+<b>=================================================================</b>
   <h2><li>My Website 04 <a href="https://ravana69.github.io/mywebpage4">🚀</a></li></h2>
 1. <a href="https://www.movenowthinklater.com/">Move Now Think Later</a>
 <br>
@@ -70,11 +70,17 @@
 <br>
 7. <a href="https://randomstreetview.com/">Random Street View</a>
 <br>
-  <b>=================================================================</b>
+<b>=================================================================</b>
 <h2><li>My Website 05 <a href="https://ravana69.github.io/mywebpage5">🚀</a></li></h2>
 1. <a href="https://globalsequencer.com/menu">Global Sequencer</a>
 <br>
-  <b>=================================================================</b>
-    </ul>
+2. <a href="https://ravana69.github.io/Flappy-2048/">Flappy 2048</a>
+<br>
+3. <a href="https://ravana69.github.io/link-cleaner/">Link Cleaner</a>
+<br>
+4. <a href="https://ravana69.github.io/photostack/">Photostack</a>
+<br>
+<b>=================================================================</b>
+</ul>
 </body>
 </html> 
