--- a/index.html
+++ b/index.html
@@ -120,51 +120,29 @@
 <br>
 <b>=================================================================</b>
 <h2><li>My Website 08 <a href="https://ravana69.github.io/mywebpage8">🚀</a></li></h2>
-1. <a href="https://ravana69.github.io/spiral/">Neon Flames</a>
+1. <a href="https://ravana69.github.io/spiral/">Spiral</a>
 <br>
-2. <a href="https://zty.pe/">Z Type</a>
+2. <a href="https://ravana69.github.io/Gravity-Points/">Gravity Points</a>
 <br>
-3. <a href="https://discord-avatar-maker.app/">Discord Avatar Maker</a>
+3. <a href="https://ravana69.github.io/visualizer/">Visualizer</a>
 <br>
-4. <a href="https://demos.littleworkshop.fr/infinitown">Infinitown</a>
+4. <a href="https://ravana69.github.io/genesistypewriter/">Genesis Typewriter</a>
 <br>
-5. <a href="https://demos.littleworkshop.fr/track">Track</a>
+5. <a href="https://ravana69.github.io/spaceglobe/">Space Globe</a>
 <br>
-6. <a href="https://ravana69.github.io/pintr/">Pintr</a>
+6. <a href="https://ravana69.github.io/warpcss/">Warp CSS</a>
 <br>
-7. <a href="https://ravana69.github.io/3dshadow/">3dshadow</a>
-<br>
-<b>=================================================================</b>
-<h2><li>My Website 07 <a href="https://ravana69.github.io/mywebpage9">🚀</a></li></h2>
-1. <a href="https://29a.ch/sandbox/2011/neonflames/#">Neon Flames</a>
-<br>
-2. <a href="https://zty.pe/">Z Type</a>
-<br>
-3. <a href="https://discord-avatar-maker.app/">Discord Avatar Maker</a>
-<br>
-4. <a href="https://demos.littleworkshop.fr/infinitown">Infinitown</a>
-<br>
-5. <a href="https://demos.littleworkshop.fr/track">Track</a>
-<br>
-6. <a href="https://ravana69.github.io/pintr/">Pintr</a>
-<br>
-7. <a href="https://ravana69.github.io/3dshadow/">3dshadow</a>
+7. <a href="https://ravana69.github.io/erosion/">Erosion</a>
 <br>
 <b>=================================================================</b>
-<h2><li>My Website 07 <a href="https://ravana69.github.io/mywebpage10">🚀</a></li></h2>
-1. <a href="https://29a.ch/sandbox/2011/neonflames/#">Neon Flames</a>
+<h2><li>My Website 09 <a href="https://ravana69.github.io/mywebpage9">🚀</a></li></h2>
+1. <a href="https://ravana69.github.io/florent/">Florent</a>
 <br>
-2. <a href="https://zty.pe/">Z Type</a>
+2. <a href="https://ravana69.github.io/legominifigure/">Lego Mini Figure</a>
 <br>
-3. <a href="https://discord-avatar-maker.app/">Discord Avatar Maker</a>
+3. <a href="https://ravana69.github.io/alongway/">Along Way</a>
 <br>
-4. <a href="https://demos.littleworkshop.fr/infinitown">Infinitown</a>
-<br>
-5. <a href="https://demos.littleworkshop.fr/track">Track</a>
-<br>
-6. <a href="https://ravana69.github.io/pintr/">Pintr</a>
-<br>
-7. <a href="https://ravana69.github.io/3dshadow/">3dshadow</a>
+4. <a href="https://ravana69.github.io/hyperspace/">Hyperspace</a>
 <br>
 <b>=================================================================</b>
 </ul>
