--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <br>
 3. <a href="https://wickedbackgrounds.com/app">Wicked Backgrounds</a>
 <br>
-4. <a href="https://github.com/ravana69/map-of-reddit">Map of Reddit</a>
+4. <a href="https://ravana69.github.io/map-of-reddit">Map of Reddit</a>
 <br>
 5. <a href="https://amazondating.co/">Amazon Dating</a>
 <br>
