--- a/index.html
+++ b/index.html
@@ -144,6 +144,8 @@
 <br>
 4. <a href="https://ravana69.github.io/hyperspace/">Hyperspace</a>
 <br>
+5. <a href="https://ravana69.github.io/glowyearthquake/">Glowy Earthquake</a>
+<br>
 <b>=================================================================</b>
 </ul>
 </body>
