--- a/index.html
+++ b/index.html
@@ -146,6 +146,8 @@
 <br>
 5. <a href="https://ravana69.github.io/glowyearthquake/">Glowy Earthquake</a>
 <br>
+6. <a href="https://ravana69.github.io/tixy/">Tixy</a>
+<br>
 <b>=================================================================</b>
 </ul>
 </body>
