--- a/index.html
+++ b/index.html
@@ -148,6 +148,8 @@
 <br>
 6. <a href="https://ravana69.github.io/tixy/">Tixy</a>
 <br>
+7. <a href="https://ravana69.github.io/SpirographN/">Spirograph</a>
+<br>
 <b>=================================================================</b>
 </ul>
 </body>
