--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 <ul style=“list-style-type:square”>
 <h1><li>INDEX</li></h1>
-<h2><li>My Website 01 <a href="https://ravana69.github.io/mywebpage1">🚀</a></li></h2>
+<h2><li>My Websites <a href="https://ravana69.github.io/index">🚀</a></li></h2>
 1. <a href="https://ravana69.github.io/All-OF-MY-FM/">My FMs</a>
 <br>
 2. <a href="https://ravana69.github.io/dotspace/">Dot Space</a>
@@ -22,91 +22,79 @@
 <br>
 7. <a href="https://ravana69.github.io/mobileversion/">Mobile Version</a>
 <br>
-<b>=================================================================</b>
-<h2><li>My Website 02 <a href="https://ravana69.github.io/mywebpage2">🚀</a></li></h2>
-1. <a href="https://multiuser-sketchpad-colors.glitch.me/">Sketchpad</a>
+8. <a href="https://multiuser-sketchpad-colors.glitch.me/">Sketchpad</a>
 <br>
-2. <a href="https://patatap.com/">Patatap</a>
+9. <a href="https://patatap.com/">Patatap</a>
 <br>
-3. <a href="https://eternalbox.dev/jukebox_index.html">Eternal Box</a>
+10. <a href="https://eternalbox.dev/jukebox_index.html">Eternal Box</a>
 <br>
-4. <a href="https://sleepyti.me/">Sleepti</a>
+11. <a href="https://sleepyti.me/">Sleepti</a>
 <br>
-5. <a href="https://alltheminutes.com/">All the Minutes</a>
+12. <a href="https://alltheminutes.com/">All the Minutes</a>
 <br>
-6. <a href="https://www.yourworldoftext.com/">Your world of text</a>
+13. <a href="https://www.yourworldoftext.com/">Your world of text</a>
 <br>
-7. <a href="https://thispersondoesnotexist.com/">This Person Does Not Exist</a>
+14. <a href="https://thispersondoesnotexist.com/">This Person Does Not Exist</a>
 <br>
-<b>=================================================================</b>
-<h2><li>My Website 03 <a href="https://ravana69.github.io/mywebpage3">🚀</a></li></h2>
-1. <a href="https://ravana69.github.io/Physarum-WebGL/">Physarum-WebGL</a>
+15. <a href="https://ravana69.github.io/Physarum-WebGL/">Physarum-WebGL</a>
 <br>
-2. <a href="https://ravana69.github.io/literature-clock/">Literature Clock</a>
+16. <a href="https://ravana69.github.io/literature-clock/">Literature Clock</a>
 <br>
-3. <a href="https://ravana69.github.io/burd/">Burd</a>
+17. <a href="https://ravana69.github.io/burd/">Burd</a>
 <br>
-4. <a href="https://ravana69.github.io/human/">Human</a>
+18. <a href="https://ravana69.github.io/human/">Human</a>
 <br>
-5. <a href="https://ravana69.github.io/flat-surface-shader/">Flat Surface Shader</a>
+19. <a href="https://ravana69.github.io/flat-surface-shader/">Flat Surface Shader</a>
 <br>
-6. <a href="https://the.wubmachine.com/">Wub Machine</a>
+20. <a href="https://the.wubmachine.com/">Wub Machine</a>
 <br>
-7. <a href="https://blocks.wizb.it/">Blocks Wizb</a>
+21. <a href="https://blocks.wizb.it/">Blocks Wizb</a>
 <br>
-<b>=================================================================</b>
-  <h2><li>My Website 04 <a href="https://ravana69.github.io/mywebpage4">🚀</a></li></h2>
-1. <a href="https://www.movenowthinklater.com/">Move Now Think Later</a>
+22. <a href="https://www.movenowthinklater.com/">Move Now Think Later</a>
 <br>
-2. <a href="https://ravana69.github.io/bitlisten/">Bit Listen</a>
+23. <a href="https://ravana69.github.io/bitlisten/">Bit Listen</a>
 <br>
-3. <a href="https://threatmap.checkpoint.com/">Threatmap</a>
+24. <a href="https://threatmap.checkpoint.com/">Threatmap</a>
 <br>
-4. <a href="https://www.sharedrop.io/">Sharedrop</a>
+25. <a href="https://www.sharedrop.io/">Sharedrop</a>
 <br>
-5. <a href="http://touchpianist.com/">Touch Pianist</a>
+26. <a href="http://touchpianist.com/">Touch Pianist</a>
 <br>
-6. <a href="https://forgotify.com/">Forgotify</a>
+27. <a href="https://forgotify.com/">Forgotify</a>
 <br>
-7. <a href="https://randomstreetview.com/">Random Street View</a>
+28. <a href="https://randomstreetview.com/">Random Street View</a>
 <br>
-<b>=================================================================</b>
-<h2><li>My Website 05 <a href="https://ravana69.github.io/mywebpage5">🚀</a></li></h2>
-1. <a href="https://globalsequencer.com/menu">Global Sequencer</a>
+29. <a href="https://globalsequencer.com/menu">Global Sequencer</a>
 <br>
-2. <a href="https://ravana69.github.io/Flappy-2048/">Flappy 2048</a>
+30. <a href="https://ravana69.github.io/Flappy-2048/">Flappy 2048</a>
 <br>
-3. <a href="https://ravana69.github.io/link-cleaner/">Link Cleaner</a>
+31. <a href="https://ravana69.github.io/link-cleaner/">Link Cleaner</a>
 <br>
-4. <a href="https://ravana69.github.io/photostack/">Photostack</a>
+32. <a href="https://ravana69.github.io/photostack/">Photostack</a>
 <br>
-5. <a href="https://www.thedotclock.com/">The Dot Clock</a>
+33. <a href="https://www.thedotclock.com/">The Dot Clock</a>
 <br>
-6. <a href="https://ravana69.github.io/blackscreen/">All Black Screen</a>
+34. <a href="https://ravana69.github.io/blackscreen/">All Black Screen</a>
 <br>
-7. <a href="https://ourworldofpixels.com/">Our World Of Pixels</a>
+35. <a href="https://ourworldofpixels.com/">Our World Of Pixels</a>
 <br>
-<b>=================================================================</b>
-<h2><li>My Website 06 <a href="https://ravana69.github.io/mywebpage6">🚀</a></li></h2>
-1. <a href="https://emkei.cz/">Anonymous Emailer</a>
+36. <a href="https://emkei.cz/">Anonymous Emailer</a>
 <br>
-2. <a href="https://ourworldofpixels.com/countrysim">Country Simulator</a>
+37. <a href="https://ourworldofpixels.com/countrysim">Country Simulator</a>
 <br>
-3. <a href="https://wickedbackgrounds.com/app">Wicked Backgrounds</a>
+38. <a ref="https://wickedbackgrounds.com/app">Wicked Backgrounds</a>
 <br>
-4. <a href="https://ravana69.github.io/map-of-reddit">Map of Reddit</a>
+39.  href="https://ravana69.github.io/map-of-reddit">Map of Reddit</a>
 <br>
-5. <a href="https://amazondating.co/">Amazon Dating</a>
+40.  href="https://amazondating.co/">Amazon Dating</a>
 <br>
-6. <a href="https://www.stef.be/bassoontracker/">Bassoontracker</a>
+41.  href="https://www.stef.be/bassoontracker/">Bassoontracker</a>
 <br>
-7. <a href="https://sandspiel.club/">Sandspiel</a>
+42.  href="https://sandspiel.club/">Sandspiel</a>
 <br>
-<b>=================================================================</b>
-<h2><li>My Website 07 <a href="https://ravana69.github.io/mywebpage7">🚀</a></li></h2>
-1. <a href="https://29a.ch/sandbox/2011/neonflames/#">Neon Flames</a>
+43.  href="https://29a.ch/sandbox/2011/neonflames/#">Neon Flames</a>
 <br>
-2. <a href="https://zty.pe/">Z Type</a>
+44. a href="https://zty.pe/">Z Type</a>
 <br>
 3. <a href="https://discord-avatar-maker.app/">Discord Avatar Maker</a>
 <br>
@@ -118,8 +106,6 @@
 <br>
 7. <a href="https://ravana69.github.io/3dshadow/">3dshadow</a>
 <br>
-<b>=================================================================</b>
-<h2><li>My Website 08 <a href="https://ravana69.github.io/mywebpage8">🚀</a></li></h2>
 1. <a href="https://ravana69.github.io/spiral/">Spiral</a>
 <br>
 2. <a href="https://ravana69.github.io/Gravity-Points/">Gravity Points</a>
@@ -134,8 +120,6 @@
 <br>
 7. <a href="https://ravana69.github.io/erosion/">Erosion</a>
 <br>
-<b>=================================================================</b>
-<h2><li>My Website 09 <a href="https://ravana69.github.io/mywebpage9">🚀</a></li></h2>
 1. <a href="https://ravana69.github.io/florent/">Florent</a>
 <br>
 2. <a href="https://ravana69.github.io/legominifigure/">Lego Mini Figure</a>
@@ -150,8 +134,6 @@
 <br>
 7. <a href="https://ravana69.github.io/SpirographN/">Spirograph</a>
 <br>
-<b>=================================================================</b>
-<h2><li>My Website 10 <a href="https://ravana69.github.io/mywebpage10">🚀</a></li></h2>
 1. <a href="http://somethingnothing.net/">Something Nothing</a>
 <br>
 2. <a href="https://hat.sh">Hat.sh</a>
@@ -166,8 +148,6 @@
 <br>
 7. <a href="https://ravana69.github.io/city-roads/">City Roads</a>
 <br>
-<b>=================================================================</b>
-<h2><li>My Website 11 <a href="https://ravana69.github.io/mywebpage11">🚀</a></li></h2>
 1. <a href="https://ravana69.github.io/pplay/">PPlay</a>
 <br>
 2. <a href="https://ravana69.github.io/sayit/">Reddit Sayit</a>
