--- a/index.html
+++ b/index.html
@@ -158,6 +158,30 @@
 <br>
 75. <a href="https://doodleipsum.com/">Doodle Ipsum</a>
 <br>
+76. <a href="https://www.joshwcomeau.com/gradient-generator/">Gradient Generator</a>
+<br>
+77. <a href="https://trianglify.io/">Trianglify</a>
+<br>
+78. <a href="https://duotones.co/">Duotones</a>
+<br>
+79. <a href="https://trianglify.io/">Trianglify</a>
+<br>
+80. <a href="https://sha256algorithm.com/">SHA256</a>
+<br>
+81. <a href="https://generative.fm/">Generative FM</a>
+<br>
+82. <a href="https://everycoinprice.com/?symbol=BTC&interval=1hour&exchange=0">Every Coin Price</a>
+<br>
+83. <a href="https://1.ravana69.workers.dev/-----https://skribbl.io/">Skribbl</a>
+<br>
+84. <a href="https://malmal.io/activity">Malmal</a>
+<br>
+85. <a href="https://jwestman.gitlab.io/osm-in-realtime/">OSM Realtime</a>
+<br>
+86. <a href="https://photomosh.com/">Photomosh</a>
+<br>
+87. <a href="https://colorhunt.co/">Color Hunt</a>
+<br>
 <b>=================================================================</b>
 </ul>
 </body>
