--- a/index.html
+++ b/index.html
@@ -190,5 +190,6 @@
 <br>
 <b>=================================================================</b>
 </ul>
+  <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
 </body>
 </html> 
