--- a/index.html
+++ b/index.html
@@ -190,6 +190,8 @@
 <br>
 91. <a href="https://ravana69.github.io/liquidparticle/">Liquid Particle</a>
 <br>
+92. <a href="https://plaza.one/">Nightwave Plaza</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
