--- a/index.html
+++ b/index.html
@@ -192,6 +192,10 @@
 <br>
 92. <a href="https://plaza.one/">Nightwave Plaza</a>
 <br>
+93. <a href="https://1.ravana69.workers.dev/-----https://rave.dj/mix">Rave DJ</a>
+<br>
+94. <a href="https://lab.colinpeyrat.com/dissolve/">Dissolve</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
