--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
 <br>
 94. <a href="https://lab.colinpeyrat.com/dissolve/">Dissolve</a>
 <br>
+95. <a href="https://covidloader.com/">Covidloader</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
