--- a/index.html
+++ b/index.html
@@ -198,6 +198,16 @@
 <br>
 95. <a href="https://covidloader.com/">Covidloader</a>
 <br>
+96. <a href="https://soundscape.world/">Soundscape</a>
+<br>
+97. <a href="https://physicsofbeauty.art">Physics Of Beauty</a>
+<br>
+98. <a href="https://rsoe-edis.org/eventMap">Event Map</a>
+<br>
+99. <a href="https://ravana69.github.io/color-clock/">Color Clock</a>
+<br>
+100. <a href="https://aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com/">A(x56)</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
