--- a/index.html
+++ b/index.html
@@ -164,8 +164,7 @@
 <br>
 78. <a href="https://duotones.co/">Duotones</a>
 <br>
-79. <a href="https://trianglify.io/">Trianglify</a>
-<br>
+79. <a href="https://trianglify.io/">Trianglify</a><br>
 80. <a href="https://sha256algorithm.com/">SHA256</a>
 <br>
 81. <a href="https://generative.fm/">Generative FM</a>
@@ -207,6 +206,18 @@
 99. <a href="https://ravana69.github.io/color-clock/">Color Clock</a>
 <br>
 100. <a href="https://aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa.com/">A(x56)</a>
+<br>
+101. <a href="https://dinosaurpictures.org/ancient-earth">Ancient Earth</a>
+<br>
+102. <a href="https://minimalavatars.com/">Minimal Avatars</a>
+<br>
+103. <a href="https://ravana69.github.io/Fantasy-Map-Generator/">Fantasy Map Generator</a>
+<br>
+104. <a href="https://fffuel.co/uuunion/">UUUnion</a>
+<br>
+105. <a href="https://ravana69.github.io/interactivecube/">Interactive Cube</a>
+<br>
+106. <a href="https://ravana69.github.io/morphedsphere/">Morphed Sphere</a>
 <br>
 <b>=================================================================</b>
 </ul>
