--- a/index.html
+++ b/index.html
@@ -285,6 +285,8 @@
 <br>
 139. <a href="https://www.window-swap.com/Window/">Window Swap</a>
 <br>
+140. <a href="https://ravana69.github.io/ghost-mouse/">Ghost Mouse</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
