--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 <br>
 140. <a href="https://ravana69.github.io/ghost-mouse/">Ghost Mouse</a>
 <br>
-141. <a href="https://ravana69.github.io/convection/">Ghost Mouse</a>
+141. <a href="https://ravana69.github.io/convection/">Convection</a>
 <br>
 <b>=================================================================</b>
 </ul>
