--- a/index.html
+++ b/index.html
@@ -289,6 +289,8 @@
 <br>
 141. <a href="https://ravana69.github.io/convection/">Convection</a>
 <br>
+142. <a href="https://ravana69.github.io/bismuth/">Bismuth</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
