--- a/index.html
+++ b/index.html
@@ -295,6 +295,8 @@
 <br>
 144. <a href="https://virtualvacation.us/guess">Virtual Vacation Guess</a>
 <br>
+145. <a href="https://ravana69.github.io/squishytoy/">Squishy Toy</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
