--- a/index.html
+++ b/index.html
@@ -309,6 +309,20 @@
 <br>
 151. <a href="https://jayweeks.com/medusae/">Medusae</a>
 <br>
+152. <a href="https://batname-nine.vercel.app/">Batman Name</a>
+<br>
+153. <a href="https://cowsay-svelte-rho.vercel.app/">Cowsays</a>
+<br>
+154. <a href="https://ravana69.github.io/FloatingShinyKnot/">Floating Shiny Knot</a>
+<br>
+155. <a href="https://ravana69.github.io/baubles">Baubles</a>
+<br>
+156. <a href="https://squoosh.app/">Squoosh</a>
+<br>
+157. <a href="https://soulwire.co.uk/">Soulwire</a>
+<br>
+158. <a href="https://ravana69.github.io/Plasmatic-Isosurface/">Plasmatic-Isosurface</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
