--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <br>
 37. <a href="https://ourworldofpixels.com/countrysim">Country Simulator</a>
 <br>
-38. <a ref="https://wickedbackgrounds.com/app">Wicked Backgrounds</a>
+38. <a href="https://wickedbackgrounds.com/app">Wicked Backgrounds</a>
 <br>
 39. <a href="https://ravana69.github.io/map-of-reddit">Map of Reddit</a>
 <br>
