--- a/index.html
+++ b/index.html
@@ -164,7 +164,8 @@
 <br>
 78. <a href="https://duotones.co/">Duotones</a>
 <br>
-79. <a href="https://trianglify.io/">Trianglify</a><br>
+79. <a href="http://minnalmurali.vercel.app/">Minnal Murali</a>
+<br>
 80. <a href="https://sha256algorithm.com/">SHA256</a>
 <br>
 81. <a href="https://generative.fm/">Generative FM</a>
