--- a/index.html
+++ b/index.html
@@ -332,6 +332,16 @@
 <br>
 162. <a href="https://thisartworkdoesnotexist.com/">This art work doesnot exist</a>
 <br>
+163. <a href="https://www.fakenamegenerator.com/">Fake Name Generator</a>
+<br>
+164. <a href="https://ravana69.github.io/flagwaver/">Flagwaver</a>
+<br>
+165. <a href="https://ravana69.github.io/printacalendar/">Print a Calendar</a>
+<br>
+166. <a href="https://ai-art.tokyo/en/">AI Art Tokyo</a>
+<br>
+167. <a href="https://maposaic.com/">Maposaic</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
