--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 <br>
 35. <a href="https://ourworldofpixels.com/">Our World Of Pixels</a>
 <br>
-36. <a href="https://emkei.cz/">Anonymous Emailer</a>
+36. <a href="http://elenco.leoalfre.altervista.org/beta/FakeMail/index.html">Anonymous Emailer</a>
 <br>
 37. <a href="https://ourworldofpixels.com/countrysim">Country Simulator</a>
 <br>
