--- a/index.html
+++ b/index.html
@@ -358,6 +358,8 @@
 <br>
 175. <a href="https://ravana69.github.io/stereoDrift.github.io/">StereoDrift</a>
 <br>
+176. <a href=https://ravana69.github.io/roboticdance/">Robotic Dance</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
