--- a/index.html
+++ b/index.html
@@ -362,6 +362,8 @@
 <br>
 177. <a href=https://flamereactor.com/">Flame Reactor</a>
 <br>
+178. <a href=https://ravana69.github.io/scale/">Color Scale</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
