--- a/index.html
+++ b/index.html
@@ -364,6 +364,10 @@
 <br>
 178. <a href=https://ravana69.github.io/scale/">Color Scale</a>
 <br>
+179. <a href=https://ravana69.github.io/jwz/">JWZ</a>
+<br>
+180. <a href=http://ravana69.github.io/fieldplay/">Fieldplay</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
