--- a/index.html
+++ b/index.html
@@ -370,6 +370,8 @@
 <br>
 181. <a href=https://torrent.parts/">Torrent Parts</a>
 <br>
+182. <a href=http://ravana69.github.io/PathFinding.js/visual/">Pathfinding</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
