--- a/index.html
+++ b/index.html
@@ -358,25 +358,25 @@
 <br>
 175. <a href="https://ravana69.github.io/stereoDrift.github.io/">StereoDrift</a>
 <br>
-176. <a href=https://ravana69.github.io/roboticdance/">Robotic Dance</a>
+176. <a href="https://ravana69.github.io/roboticdance/">Robotic Dance</a>
 <br>
-177. <a href=https://flamereactor.com/">Flame Reactor</a>
+177. <a href="https://flamereactor.com/">Flame Reactor</a>
 <br>
-178. <a href=https://ravana69.github.io/scale/">Color Scale</a>
+178. <a href="https://ravana69.github.io/scale/">Color Scale</a>
 <br>
-179. <a href=https://ravana69.github.io/jwz/">JWZ</a>
+179. <a href="https://ravana69.github.io/jwz/">JWZ</a>
 <br>
-180. <a href=http://ravana69.github.io/fieldplay/">Fieldplay</a>
+180. <a href="http://ravana69.github.io/fieldplay/">Fieldplay</a>
 <br>
-181. <a href=https://torrent.parts/">Torrent Parts</a>
+181. <a href="https://torrent.parts/">Torrent Parts</a>
 <br>
-182. <a href=http://ravana69.github.io/PathFinding.js/visual/">Pathfinding</a>
+182. <a href="http://ravana69.github.io/PathFinding.js/visual/">Pathfinding</a>
 <br>
-183. <a href=https://maxbittker.github.io/moon-ring/">Moon RIng</a>
+183. <a href="https://maxbittker.github.io/moon-ring/">Moon RIng</a>
 <br>
-184. <a href=https://framework.set-reset.com/">Framework</a>
+184. <a href="https://framework.set-reset.com/">Framework</a>
 <br>
-185. <a href=https://ravana69.github.io/Sketches/">Sketches</a>
+185. <a href="https://ravana69.github.io/Sketches/">Sketches</a>
 <br>
 <b>=================================================================</b>
 </ul>
