--- a/index.html
+++ b/index.html
@@ -378,6 +378,8 @@
 <br>
 185. <a href="https://ravana69.github.io/Sketches/">Sketches</a>
 <br>
+186. <a href="https://www.silveos.com/">Silveros</a>
+<br>
 <b>=================================================================</b>
 </ul>
   <embed name="GoodEnough" src="manase.mp3" loop="true" hidden="true" autostart="true">
